spacing issues

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,13 +18,16 @@
 
 $red: #ee2e24;
 
+.pagination {
+  font-weight: 100;
+}
 img {
   width: 100%;
   max-width: 600px;
 }
 
 .img {
-   box-shadow: 7px 7px 9px #c4c2c2;
+  border: 1px solid #ccc;
 }
 
 h1 {
@@ -48,30 +51,37 @@ body {
 }
 
 footer {
-  border-top: 1px solid #dddddd;
   width: 100%;
+  background: #eee;
   text-align: center;
   position: static;
-  padding: 10px 0 10px;
+  padding: 10px 0 30px;
   margin-top: 40px;
+  color: #727272;
+}
+
+footer span {
+  color: #444;
+  font-weight: 500;
 }
 
 footer li a,footer  li a:visited, footer li a:focus {
-  color: #545454;
+  color: #727272;
   text-decoration: none;
-  transition: all .3s ease;
+  transition: all .1s ease;
   font-weight: 100;
   padding: 0 22px;
 }
 
 footer li a:hover {
-  opacity: .8; 
+  color: #333;
 }
 
 #map {
   width: 100%;
   max-width: 600px;
   height: 400px;
+  border: 1px solid #ccc;
 }
 nav a, nav a:visited, nav a:focus {
   color: #fff;
@@ -80,7 +90,7 @@ nav a, nav a:visited, nav a:focus {
 }
 
 a:hover {
-  opacity: 0.8;
+  opacity: 0.9;
   text-decoration: none;
 }
 
@@ -120,7 +130,7 @@ ul {
 #brand {
   position: absolute;
   top: 20px;
-  left: 0px;
+  left: 37px;
 }
 
 #brand a {
@@ -156,7 +166,6 @@ nav li a,nav  li a:visited,nav  li a:focus {
 
 nav li a:hover {
   background: $nav-button;  
-  opacity: 1; 
 }
 
 
@@ -175,12 +184,8 @@ nav li a:hover {
   }
 
   #brand {
-    top: 11px;
-    left: 15px;
-  }
-
-  #brand img {
-  width: 30px;
+    left: 12px;
+    top: 18px;
   }
 
   nav li a, nav li a:visited, nav li a:focus {
@@ -196,6 +201,7 @@ nav li a:hover {
     text-align: left;
   }
 
+
 }
 
 @media (max-width:450px) {
@@ -203,10 +209,20 @@ nav li a:hover {
   nav {
     padding: 10px 0;
   }
+  #brand {
+    top: 26px;
+  }
+  #brand img {
+    width: 33px;
+  }
 
   nav li a, nav li a:hover {
     font-size: .9em;
     padding: 28px 10px 26px;
+  }
+
+  footer li a {
+    padding: 0 10px;
   }
 }
 
@@ -252,6 +268,8 @@ textarea, textarea:focus {
   outline: 0;
   font-family: 'Roboto Condensed';
   font-size: .9em;
+  border: 1px solid #ccc;
+  border-radius: 3px;
 }
 
 textarea {
@@ -280,6 +298,14 @@ select {
     outline: 0;
 }
 
+.file .required {
+  border:0 ;
+}
+
+.place_defaultpicture label  {
+  display: none;
+}
+
 input[type="submit" i],
 input[type="submit" i]:visited,
 input[type="submit" i]:focus,
@@ -287,11 +313,11 @@ input[type="submit" i]:active,
 .btn {
     width: auto;
     padding: 8px 15px;
-    border: 1px solid #ddd;
+    border: 1px solid #ccc;
     color: #333 !important;
     font-weight: 100;
     background: #fff;
-    border-radius: 5px;
+    border-radius: 3px;
     font-family: "Roboto Condensed";
     font-size: 0.9em;
     outline: 0;
@@ -302,6 +328,7 @@ input[type="submit" i]:active,
 
 input[type="submit" i]:hover {
   color: red;
+  opacity: 1;
   -webkit-appearance: button;
 }
 
